# pyslurm

./: setup.cfg  setup.py
doc/source/: conf.py
